# ros_rgbd_cnn

./: CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
exp/: RGBD_Normals.py
include/ros_rgbd_cnn/: planenet.hpp
launch/: example.launch
msg/: Result.msg
nodes/: planeFitting.py  planenet.py  rednet.py  rgbdnet.py  ros_rgbd_cnn_core.py  ros_rgbd_cnn_node  ros_rgbd_cnn_node_depthonly
rviz/: example.rviz
src/ros_rgbd_cnn/: RedNet_data_depth.py  RedNet_inference_depth.py  RedNet_model.py  RedNet_model_depth.py  RedNet_model_rgbplane.py  RedNet_train_depth.py  data_rgbd.py  data_rgbplane.py  model_rgbd.py  model_rgbplane.py  rgbd_planefitting.py  train_rgbd.py  train_rgbplane.py  utils.py
torch_cpp/: CMakeLists.txt  example-app.cpp  planenet.cpp  planenet.hpp  planenet_demo  planenet_demo.cpp  ros_plane_segmentation.cpp
torch_cpp/model/: README
torch_cpp/test_data/: plane.txt  planeImage.tiff
weights/: download_weights.sh
