<?xml version="1.0"?>
<package>
  <name>ros_rgbd_cnn</name>
  <version>0.1.0</version>
  <description>RGBD CNN implementations for ROS</description>

  <maintainer email = "jzhang72@uncc.edu">Jincheng Zhang</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>vision_opencv</run_depend>
</package>
